@@ -226,3 +226,6 @@ SQL.text=\u0053\u0051\u004c
 EXPANDALL.text=\u0045\u0078\u0070\u0061\u006e\u0064\u0020\u0061\u006c\u006c
 COLLAPSEALL.text=\u0043\u006f\u006c\u006c\u0061\u0070\u0073\u0065\u0020\u0061\u006c\u006c
 GRIDSIZEAFTERREVERSEENGINEERING.text=\u0047\u0072\u0069\u0064\u0020\u0073\u0069\u007a\u0065\u0020\u0061\u0066\u0074\u0065\u0072\u0020\u0072\u0065\u0076\u0065\u0072\u0073\u0065\u0020\u0065\u006e\u0067\u0069\u006e\u0065\u0065\u0072\u0069\u006e\u0067
+SELECTALL.text=\u0053\u0065\u006c\u0065\u0063\u0074\u0020\u0061\u006c\u006c
+DESELECTALL.text=\u0044\u0065\u0073\u0065\u006c\u0065\u0063\u0074\u0020\u0061\u006c\u006c
+INVERTSELECTION.text=\u0049\u006e\u0076\u0065\u0072\u0074\u0020\u0073\u0065\u006c\u0065\u0063\u0074\u0069\u006f\u006e
